# Captain-s-Log

./: .capcom_config.json  .gitignore  CMakeLists_additions.txt  Export-CaptainWeb-Source.ps1  Export-Project-Code.ps1  Finalize-CaptainsLog-Publish-UTF8-v11.ps1  Finalize-CaptainsLog-Publish-UTF8-v12.ps1  Finalize-CaptainsLog-Publish-v10.ps1  Fix-CaptainWeb-v07-Build.ps1  Fix-CaptainsLog-Implementation-And-Scan-Audit-v2.ps1  Fix-CaptainsLog-Implementation-And-Scan-Audit.ps1  Fix-CaptainsLog-Implementation-Evidence.ps1  Fix-CaptainsLog-Test-Evidence-Call.ps1  Fix-Export-Project-Code-PowerShell5.ps1  Install-CaptainsLog-Report-Enhancements.ps1  Prepare-CaptainWeb-Source.ps1  Publish-CaptainsLog-WordReport-Final.ps1  Publish-CaptainsLog-WordReport-Final.ps1.before-evidence-recovery-20260716-134554.bak  Publish-CaptainsLog-WordReport-Final.ps1.before-implementation-evidence-fix.bak  Publish-CaptainsLog-WordReport-v3.ps1  Publish-CaptainsLog-WordReport-v4.ps1  README.md  Recover-And-Fix-CaptainsLog-WordPublisher.ps1  Repair-CaptainsLog-Separate-PDF-Export-v9.ps1  Restore-CaptainsLog-Final-Publisher-v2.ps1  Restore-CaptainsLog-Final-Publisher.ps1  apply_review_gate.ps1  apply_v06.ps1  apply_v07_complete.ps1  build_and_install.ps1  cap.bat  capcom-cli-current.txt  captains-log-current-0.7.txt  captains_log_warning_cleanup.ps1  create_command_change.txt  datein.txt  hilfebeimkopilieren.txt  lastenheft.txt
backend/api/: README.md  __init__.py  database.py  main.py  models.py  requirements.txt  security.py  settings.py
backend/db/: init_db.py  schema.sql  traceability.db
captain-web/: CMakeLists.txt  CMakePresets.json  README.md  apply_v07.ps1  apply_v08.ps1  build-output.txt  cap-gui.ps1
captain-web/backup-v08-20260715-141148/: api_server.cpp  index.html  local_yaml_storage.cpp
captain-web/include/captain/api/: api_server.hpp  cli_bridge.hpp
captain-web/include/captain/auth/: auth_service.hpp
captain-web/include/captain/document/: document_service.hpp
captain-web/include/captain/domain/: models.hpp
captain-web/include/captain/project/: project_catalog.hpp
captain-web/include/captain/repository/: hybrid_repository.hpp
captain-web/include/captain/service/: requirement_creation_service.hpp
captain-web/include/captain/storage/: local_yaml_storage.hpp  sqlite_management_storage.hpp  storage.hpp
captain-web/include/captain/sync/: sync_service.hpp
captain-web/src/: main.cpp
captain-web/src/api/: api_server.cpp  api_server.cpp.before-auth-route.bak  api_server.cpp.before-template-fix.bak  api_server.cpp.before-unused-helper-fix.bak  cli_bridge.cpp
captain-web/src/auth/: auth_service.cpp
captain-web/src/document/: document_service.cpp
captain-web/src/project/: project_catalog.cpp
captain-web/src/repository/: hybrid_repository.cpp
captain-web/src/service/: requirement_creation_service.cpp
captain-web/src/storage/: local_yaml_storage.cpp  sqlite_management_storage.cpp
captain-web/src/sync/: sync_service.cpp
captain-web/tools/: cap-gui.ps1  cap.cmd
captain-web/web/: index.html  index.html.before-error-handling.bak  index.html.before-line170-fix.bak
cli/: .gitignore  CMakeLists.txt  CMakePresets.json  INTEGRATION.md  README.md  build-output.txt  vcpkg.json  warning-clean-build.txt
cli/include/capcom/audit/: history_service.hpp
cli/include/capcom/cli/: command_parser.hpp
cli/include/capcom/commands/: create_command.hpp  gui_command.hpp  init_command.hpp  link_command.hpp  manual_commands.hpp  migrate_command.hpp  publish_command.hpp  review_command.hpp  security_commands.hpp  tree_command.hpp  yaml_commands.hpp
cli/include/capcom/config/: app_config.hpp
cli/include/capcom/http/: http_client.hpp
cli/include/capcom/identity/: identity_manager.hpp
cli/include/capcom/requirements/: requirement_store.hpp
cli/include/capcom/security/: crypto.hpp
cli/include/capcom/yaml/: yaml_store.hpp
cli/src/: main.cpp
cli/src/audit/: history_service.cpp  history_service.cpp.before-change-history-v3.bak
cli/src/cli/: command_parser.cpp
cli/src/commands/: create_command.cpp  gui_command.cpp  init_command.cpp  link_command.cpp  manual_commands.cpp  manual_commands.cpp.before-gui-history-v6.bak  migrate_command.cpp  publish_command.cpp  publish_command.cpp.before-professional-forward-declaration.bak  review_command.cpp  security_commands.cpp  tree_command.cpp  yaml_commands.cpp
cli/src/config/: app_config.cpp
cli/src/http/: http_client.cpp
cli/src/identity/: identity_manager_windows.cpp
cli/src/requirements/: requirement_store.cpp
cli/src/security/: crypto.cpp
cli/src/yaml/: yaml_store.cpp
cli/tests/: CMakeLists.txt
distribution/: README.md  build_package.ps1  pyproject.toml
distribution/src/capcom/: __init__.py
professional-publish-backup-20260716-090003/: index.html  publish_command.cpp
report-enhancement-backup-20260716-131819/: Publish-CaptainsLog-WordReport-Final.ps1  publish_command.cpp
reqs/: SEC-001.yaml  SRS-001.yaml  SRS-002.yaml  SRS-003.yaml  SYS-001.yaml  SYS-002.yaml  TEST-001.yaml  USR-001.yaml  USR-002.yaml  USR-003.yaml  USR-004.yaml
