[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "captains-log-cli"
version = "0.7.0"
description = "Captain's Log YAML-First Requirements and Traceability CLI"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Captain's Log Team" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows"
]

[project.scripts]
cap = "capcom.wrapper:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
capcom = ["bin/cap.exe"]